Corrected spacing on recipesbytype page

--- a/recipes/app/(frontend)/recipesbytype/[slug]/RecipesByType.module.css
+++ b/recipes/app/(frontend)/recipesbytype/[slug]/RecipesByType.module.css
@@ -15,6 +15,8 @@
 }
 
 .recipeCardsContainer {
+    margin-left: auto;
+    margin-right: auto;
     padding-left: 1rem;
     padding-right: 1rem;
     gap: 1rem;
@@ -24,6 +26,7 @@
     @media (min-width: 768px) {
         grid-template-columns: repeat(2, minmax(0, 1fr));
         display: grid;
+        max-width: 1200px;
     }
 
     @media (min-width: 1024px) {
